--- a/contact.html
+++ b/contact.html
@@ -61,22 +61,22 @@
                 <div class="col-md-4 d-flex">
                     <div class="bg-light align-self-stretch box p-4 text-center">
                         <h2 class="mb-4">Address</h2>
-                        <p>Madrid, Spain</p>
+                        <p>C/Río Ebro, 28947, Fuenlabrada, Madrid, Spain</p>
                     </div>
                 </div>
                 <div class="col-md-4 d-flex">
                     <div class="bg-light align-self-stretch box p-4 text-center">
                         <h3 class="mb-4">Contact</h3>
                             <ul>
-                                <li><span class="icon icon-phone"></span><span class="text">wechat：VivaVidaLida</span></li>
-                                <li><span class="icon icon-phone"></span><span class="text">Mobil: +34 684020992</span></li>
+                                <li><span class="icon icon-phone"></span><span class="text">wechat：BrainOceanInternational</span></li>
+                                <li><span class="icon icon-phone"></span><span class="text">Mobil: +34 604 902 828</span></li>
                             </ul>
                     </div>
                 </div>
                 <div class="col-md-4 d-flex">
                     <div class="bg-light align-self-stretch box p-4 text-center">
                         <h3 class="mb-4">Online Time:</h3>
-                        <p>09:00-23:00</p>
+                        <p>09:00-18:00</p>
                     </div>
                 </div>
 
@@ -84,6 +84,17 @@
         </div>
     </section>
 
+
+    <!--    map————————————————————————————————————————————————————————————————————————————————————————————————-->
+    <section class="ftco-section ftco-no-pt ftco-no-pb contact-section">
+        <div class="container">
+            <div class="row d-flex align-items-stretch no-gutters">
+                <div id="map">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3044.4048883724026!2d-3.7591530251472487!3d40.266755264755425!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd418abda7da35ad%3A0xcf5bf9b8ed7046e0!2sC.%20del%20R%C3%ADo%20Ebro%2C%2028947%2C%20Madrid!5e0!3m2!1sen!2ses!4v1687558658767!5m2!1sen!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            <div>
+        </div>
+    </section>
 
 
 
@@ -98,12 +109,12 @@
 
                         <div class="block-23 mb-3">
                             <ul>
-                                <li><span class="icon icon-map-marker"></span><span class="text">Plaza de las Olivas 3, 28027, Madrid, Spain</span></li>
+                                <li><span class="icon icon-map-marker"></span><span class="text">C/Río Ebro, 28947, Fuenlabrada, Madrid, Spain</span></li>
                                 <li><span class="icon icon-add_box"></span><span class="text">wechat：BrainOceanInternational</span></li>
                                 <li><img src="images/QRCode.jpg" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
                                 <li><span class="icon icon-phone"></span><span class="text">TEL: +34 918 188 085</span></li>
                                 <li><span class="icon icon-phone"></span><span class="text">MBL: +34 604 902 828</span></li>
-                                <li><span class="icon icon-mail_outline"></span><span class="text">contact@brainoceaninternational.com</span></li>
+                                <li><span class="icon icon-mail_outline"></span><span class="text">info@brainoceaninternational.com</span></li>
                             </ul>
                         </div>
 
