--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@
 				<div class="col-md-12 suscribete_form">
 					<h1 class="mb-4">BRAIN OCEAN INTERNATIONAL</h1>
 					<h2 style = "color: #f7f8f8">Emproving Minds, Building Future</h2>
-					<p><a href="investment.html" class="btn btn-success px-4 py-3">Consulting Service</a>
-						<a href="products.html" class="btn btn-info px-4 py-3"> Investment Service</a>
+					<p><a href="investment.html" class="btn btn-success px-4 py-3">金融保险</a>
+						<a href="ittech.html" class="btn btn-info px-4 py-3"> 企业IT技术</a>
+						<a href="products.html" class="btn btn-light px-4 py-3"> 产品代理</a>
+						<a href="others.html" class="btn btn-primary px-4 py-3"> 其他服务</a>
 					</p>
 				</div>
 			</div>
@@ -71,13 +73,15 @@
 				<div class="col-md-12 suscribete_form">
 					<h1 class="mb-4">慧洋国际</h1>
 					<h2 style = "color: #f7f8f8">启迪智慧，创造未来</h2>
-					<p><a href="investment.html" class="btn btn-success px-4 py-3">咨询服务</a>
-						<a href="products.html" class="btn btn-info px-4 py-3"> 咨询服务</a>
+					<p><a href="investment.html" class="btn btn-success px-4 py-3">金融保险</a>
+						<a href="ittech.html" class="btn btn-info px-4 py-3"> 企业IT技术</a>
+						<a href="products.html" class="btn btn-light px-4 py-3"> 产品代理</a>
+						<a href="others.html" class="btn btn-primary px-4 py-3"> 其他服务</a>
 					</p>
 				</div>
 			</div>
 		</div>
-	</div>
+	</div>s
 	<div class="slider-item" style="background-image:url(images/bg_2.jpg);">
 		<div class="overlay"></div>
 		<div class="container">
@@ -85,8 +89,10 @@
 				<div class="col-md-12 suscribete_form">
 					<h1 class="mb-4">BRAIN OCEAN INTERNATIONAL</h1>
 					<h2 style = "color: #f7f8f8">Emproving Minds, Building Future</h2>
-					<p><a href="investment.html" class="btn btn-success px-4 py-3">Consulting Service</a>
-						<a href="products.html" class="btn btn-info px-4 py-3"> Investment Service</a>
+					<p><a href="investment.html" class="btn btn-success px-4 py-3">金融保险</a>
+						<a href="ittech.html" class="btn btn-info px-4 py-3"> 企业IT技术</a>
+						<a href="products.html" class="btn btn-light px-4 py-3"> 产品代理</a>
+						<a href="others.html" class="btn btn-primary px-4 py-3"> 其他服务</a>
 					</p>
 				</div>
 			</div>
@@ -115,7 +121,6 @@
 				</div>
 			</div>
 			<div class="col-md-7 wrap-about py-5 pr-md-4 ftco-animate">
-				<h6 class="mb-4">惠洋国际责任有限公司于2023年成立于西班牙，依托在西20余年的经验，至于于为您提供最好的服务。xxxxxx</h6>
 				<h3>公司业务</h3>
 				<div class="row mt-5">
 					<div class="services-2 d-flex">
@@ -148,9 +153,11 @@
 						<div class="icon mt-2 mr-3 d-flex justify-content-center align-items-center"><span class="flaticon-jigsaw"></span></div>
 						<div class="text">
 							<h3>产品代理</h3>
-							<p>VIVO智能手机</p>
-							<p>太阳能光伏产品</p>
-							<p>储能电池</p>
+							<p>智能手机</p>
+							<p>网络设备</p>
+							<p>安防设备</p>
+							<p>光伏设备</p>
+							<p>储能设备</p>
 							<p></p>
 						</div>
 					</div>
@@ -177,74 +184,80 @@
 
 
 <section class="ftco-section">
-	<div class="container">
-		<div class="row justify-content-center mb-5 pb-2">
+	<div class="container-fluid" style="background-image: url(images/bg_3.jpg);" data-stellar-background-ratio="0.5">
+		<div class="row justify-content-center mb-5 pb-2" >
 			<div class="col-md-8 text-center heading-section ftco-animate">
+				<br>
 				<h2 class="mb-4"><span>请查看公司</span>成功案例</h2>
 				<p>Empowering Minds, Building Future</p>
 			</div>
 		</div>
 
 		<div class="row">
-			<div class="col-md-12 col-lg-12 ftco-animate">
-				<div class="pricing-entry bg-light pb-4 text-center">
-					<div class="img col-md-4 col-lg-4 ftco-animate" style="background-image: url(images/1.jpg);"></div>
-					<div class="col-md-8 col-lg-8 ftco-animate">
-						<div>
-							<h3 class="mb-3">金融投资保险业务</h3>
+			<div class="col-md-12 col-lg-12 ftco-animate ">
+				<div class="staff">
+					<div class="img-wrap d-flex align-items-stretch">
+
+						<div class="img col-md-4 col-lg-4 ftco-animate" style="background-image: url(images/service1.jpg);">
 						</div>
-						<div class="px-4">
-							<p>金融服务介绍</p>
-							<p>点击查看成功案例</p>
+						<div class="col-md-8  col-lg-10 ftco-animate" style = "background-color: #f8f9fc">
+							<div class="px-4">
+								<p>金融服务介绍</p>
+								<p>点击查看成功案例  xxxxxxxxxxxxxxxxxxx  xxxxxxxxxxxxxxxxxxx   xxxxxxxxxxxxxxxxxxx      </p>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 
-<!--			<div class="col-md-6 col-lg-12 ftco-animate">-->
-<!--				<div class="pricing-entry bg-light pb-4 text-center">-->
-<!--					<div class="img col-md-4 col-lg-4 ftco-animate" style="background-image: url(images/1.jpg);"></div>-->
-<!--					<div class="col-md-8 col-lg-8 ftco-animate">-->
-<!--						<div>-->
-<!--							<h3 class="mb-3">企业IT技术解决方案</h3>-->
-<!--						</div>-->
-<!--						<div class="px-4">-->
-<!--							<p>依托业内龙头企业，用最先进的技术为您的企业提供最优质的服务。</p>-->
-<!--						</div>-->
-<!--					</div>-->
-<!--				</div>-->
-<!--			</div>-->
+			<div class="col-md-12 col-lg-12 ftco-animate ">
+				<div class="staff">
+					<div class="img-wrap d-flex align-items-stretch">
 
-<!--			<div class="col-md-6 col-lg-12 ftco-animate">-->
-<!--				<div class="pricing-entry bg-light pb-4 text-center">-->
-<!--					<div class="img col-md-4 col-lg-4 ftco-animate" style="background-image: url(images/1.jpg);"></div>-->
-<!--					<div class="col-md-8 col-lg-8 ftco-animate">-->
-<!--						<div>-->
-<!--							<h3 class="mb-3">产品代理</h3>-->
-<!--						</div>-->
+						<div class="img col-md-4 col-lg-4 ftco-animate" style="background-image: url(images/service2.jpg);">
+						</div>
+						<div class="col-md-8  col-lg-10 ftco-animate" style = "background-color: #f8f9fc">
+							<div class="px-4">
+								<p>金融服务介绍</p>
+								<p>点击查看成功案例  xxxxxxxxxxxxxxxxxxx  xxxxxxxxxxxxxxxxxxx   xxxxxxxxxxxxxxxxxxx      </p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 
-<!--						<div class="px-4">-->
-<!--							<p> </p>-->
-<!--						</div>-->
-<!--					</div>-->
-<!--				</div>-->
-<!--			</div>-->
+			<div class="col-md-12 col-lg-12 ftco-animate ">
+				<div class="staff">
+					<div class="img-wrap d-flex align-items-stretch">
 
-<!--			<div class="col-md-6 col-lg-12 ftco-animate">-->
-<!--				<div class="pricing-entry bg-light pb-4 text-center">-->
-<!--					<div class="img col-md-4 col-lg-4 ftco-animate" style="background-image: url(images/1.jpg);"></div>-->
-<!--					<div class="col-md-8 col-lg-8 ftco-animate">-->
-<!--						<div>-->
-<!--							<h3 class="mb-3">其他企业服务</h3>-->
-<!--						</div>-->
-<!--						<div class="px-4">-->
-<!--							<p>Yes, I am an architect, I also can be your consultant for your home, your shop, and your restaurant.-->
-<!--							</p>-->
-<!--						</div>-->
-<!--					</div>-->
-<!--				</div>-->
-<!--			</div>-->
-<!--			-->
+						<div class="img col-md-4 col-lg-4 ftco-animate" style="background-image: url(images/service3.jpg);">
+						</div>
+						<div class="col-md-8  col-lg-10 ftco-animate" style = "background-color: #f8f9fc">
+							<div class="px-4">
+								<p>金融服务介绍</p>
+								<p>点击查看成功案例  xxxxxxxxxxxxxxxxxxx  xxxxxxxxxxxxxxxxxxx   xxxxxxxxxxxxxxxxxxx      </p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-md-12 col-lg-12 ftco-animate ">
+				<div class="staff">
+					<div class="img-wrap d-flex align-items-stretch">
+
+						<div class="img col-md-4 col-lg-4 ftco-animate" style="background-image: url(images/service4.jpg);">
+						</div>
+						<div class="col-md-8  col-lg-10 ftco-animate" style = "background-color: #f8f9fc">
+							<div class="px-4">
+								<p>金融服务介绍</p>
+								<p>点击查看成功案例  xxxxxxxxxxxxxxxxxxx  xxxxxxxxxxxxxxxxxxx   xxxxxxxxxxxxxxxxxxx      </p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
 		</div>
 	</div>
 </section>
@@ -287,6 +300,7 @@
 					</div>
 				</a>
 			</div>
+
 			<div class="col-md-3 ftco-animate">
 				<a href="images/image_4.jpg" class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/image_4.jpg);">
 					<div class="icon mb-4 d-flex align-items-center justify-content-center">
@@ -312,12 +326,12 @@
 
 					<div class="block-23 mb-3">
 						<ul>
-							<li><span class="icon icon-map-marker"></span><span class="text">Plaza de las Olivas 3, 28027, Madrid, Spain</span></li>
+							<li><span class="icon icon-map-marker"></span><span class="text">C/Río Ebro, 28947, Fuenlabrada, Madrid, Spain</span></li>
 							<li><span class="icon icon-add_box"></span><span class="text">wechat：BrainOceanInternational</span></li>
 							<li><img src="images/QRCode.jpg" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
 							<li><span class="icon icon-phone"></span><span class="text">TEL: +34 918 188 085</span></li>
 							<li><span class="icon icon-phone"></span><span class="text">MBL: +34 604 902 828</span></li>
-							<li><span class="icon icon-mail_outline"></span><span class="text">contact@brainoceaninternational.com</span></li>
+							<li><span class="icon icon-mail_outline"></span><span class="text">info@brainoceaninternational.com</span></li>
 						</ul>
 					</div>
 
