--- a/investment_projects.html
+++ b/investment_projects.html
@@ -28,10 +28,10 @@
 		<div class="collapse navbar-collapse" id="ftco-nav">
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item"><a href="index.html" class="nav-link">首页</a></li>
-				<li class="nav-item"><a href="investment.html" class="nav-link">金融保险</a></li>
+				<li class="nav-item active"><a href="investment.html" class="nav-link">金融保险</a></li>
 				<li class="nav-item"><a href="ittech.html" class="nav-link">企业IT技术</a></li>
 				<li class="nav-item"><a href="products.html" class="nav-link">产品代理</a></li>
-				<li class="nav-item active"><a href="others.html" class="nav-link">其他服务</a></li>
+				<li class="nav-item"><a href="others.html" class="nav-link">其他服务</a></li>
 				<li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
 				<li class="nav-item"><a href="about.html" class="nav-link">关于慧洋</a></li>
 				<li class="nav-item"><a href="contact.html" class="nav-link">联系我们</a></li>
@@ -49,17 +49,18 @@
 	<div class="container">
 		<div class="row no-gutters slider-text align-items-center justify-content-center">
 			<div class="col-md-9 ftco-animate text-center">
-				<h1 class="mb-2 bread">其他企业服务</h1>
-				<p class="breadcrumbs">
-					<span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span>
-				<p><a  class="btn btn-success px-4 py-3">人才猎聘</a>
-					<a  class="btn btn-info px-4 py-3"> 出海孵化</a>
-					<a  class="btn btn-info px-4 py-3"> 市场营销</a>
-					<a  class="btn btn-info px-4 py-3"> 其他服务</a>
+				<h1 class="mb-2 bread">金融投资保险服务</h1>
+				<p>
+					<a href="products.html" class="btn btn-info px-4 py-3"> 金融投资项目</a>
+					<a href="products.html" class="btn btn-info px-4 py-3"> MPFRE保险</a>
+				</p>
 			</div>
 		</div>
 	</div>
 </section>
+
+
+
 
 <section class="ftco-section">
 	<div class="container">
@@ -67,21 +68,10 @@
 			<div class="col-lg-12 ftco-animate">
 
 				<p>
-					<img src="images/portfolio_YulingHu_02.jpg" alt="" class="img-fluid">
-					<img src="images/portfolio_YulingHu_03.jpg" alt="" class="img-fluid">
-					<img src="images/portfolio_YulingHu_04.jpg" alt="" class="img-fluid">
-					<img src="images/portfolio_YulingHu_05.jpg" alt="" class="img-fluid">
-					<img src="images/portfolio_YulingHu_06.jpg" alt="" class="img-fluid">
-					<img src="images/portfolio_YulingHu_07.jpg" alt="" class="img-fluid">
-					<img src="images/portfolio_YulingHu_08.jpg" alt="" class="img-fluid">
-					<img src="images/portfolio_YulingHu_09.jpg" alt="" class="img-fluid">
-					<img src="images/portfolio_YulingHu_10.jpg" alt="" class="img-fluid">
-					<img src="images/portfolio_YulingHu_11.jpg" alt="" class="img-fluid">
-					<img src="images/portfolio_YulingHu_12.jpg" alt="" class="img-fluid">
-					<img src="images/portfolio_YulingHu_13.jpg" alt="" class="img-fluid">
-					<img src="images/portfolio_YulingHu_14.jpg" alt="" class="img-fluid">
-					<img src="images/portfolio_YulingHu_15.jpg" alt="" class="img-fluid">
-					<img src="images/portfolio_YulingHu_16.jpg" alt="" class="img-fluid">
+					<img src="images/invesproject01.pdf" alt="" class="img-fluid">
+					<img src="images/invesproject02.jpg" alt="" class="img-fluid">
+					<img src="images/invesproject03.jpg" alt="" class="img-fluid">
+					<img src="images/invesproject04.jpg" alt="" class="img-fluid">
 				</p>
 
 			</div>
