--- a/products.html
+++ b/products.html
@@ -53,13 +53,15 @@
     <div class="container">
         <div class="row no-gutters slider-text align-items-center justify-content-center">
             <div class="col-md-9 ftco-animate text-center">
-                <h1 class="mb-2 bread">Portfolio Software</h1>
-                <p class="breadcrumbs">
-                    <span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span>
-                    <span class="mr-2"><a href="products.html">Portfolio Architecture<i
-                            class="ion-ios-arrow-forward"></i></a>
-					</span>
-                    <span class="mr-2"><a href="news.html">Blog <i class="ion-ios-arrow-forward"></i></a></span></div>
+                <h1 class="mb-2 bread">产品代理</h1>
+				<p class="breadcrumbs">
+				<p>
+					<a  class="btn btn-info px-4 py-3"> 智能手机</a>
+					<a  class="btn btn-info px-4 py-3"> 网络设备</a>
+					<a  class="btn btn-info px-4 py-3"> 安防设备</a>
+					<a  class="btn btn-info px-4 py-3"> 光伏设备</a>
+					<a  class="btn btn-info px-4 py-3"> 储能设备</a>
+				</p>
         </div>
     </div>
 </section>
@@ -94,12 +96,12 @@
 
 					<div class="block-23 mb-3">
 						<ul>
-							<li><span class="icon icon-map-marker"></span><span class="text">Plaza de las Olivas 3, 28027, Madrid, Spain</span></li>
+							<li><span class="icon icon-map-marker"></span><span class="text">C/Río Ebro, 28947, Fuenlabrada, Madrid, Spain</span></li>
 							<li><span class="icon icon-add_box"></span><span class="text">wechat：BrainOceanInternational</span></li>
 							<li><img src="images/QRCode.jpg" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
 							<li><span class="icon icon-phone"></span><span class="text">TEL: +34 918 188 085</span></li>
 							<li><span class="icon icon-phone"></span><span class="text">MBL: +34 604 902 828</span></li>
-							<li><span class="icon icon-mail_outline"></span><span class="text">contact@brainoceaninternational.com</span></li>
+							<li><span class="icon icon-mail_outline"></span><span class="text">info@brainoceaninternational.com</span></li>
 						</ul>
 					</div>
 
