--- a/about.html
+++ b/about.html
@@ -49,9 +49,8 @@
 				<h1 class="mb-2 bread">关于我们 | About BOI</h1>
 				<p class="breadcrumbs">
 					<span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span>
-					<span class="mr-2"><a href="products.html">Portfolio Architecture<i class="ion-ios-arrow-forward"></i></a></span>
-					<span class="mr-2"><a href="products.html">Portfolio Software<i class="ion-ios-arrow-forward"></i></a></span>
-					<span class="mr-2"><a href="news.html">Blog <i class="ion-ios-arrow-forward"></i></a></span></div>
+					<span class="mr-2"><a href="contact.html">Contact<i class="ion-ios-arrow-forward"></i></a></span>
+					<span class="mr-2"><a href="news.html">News <i class="ion-ios-arrow-forward"></i></a></span></div>
 		</div>
 	</div>
 </section>
@@ -61,7 +60,6 @@
 		<div class="row d-flex mb-5 contact-info">
 			<div class="col-md-4 d-flex">
 				<div class="bg-light align-self-stretch box p-4 text-center">
-<!--					<div style="background-image: url(images/ceo.jpg);"></div>-->
 					<div>
 						<img src="images/ceo.jpg" alt = "" width="100%" height="100%" style="align-items: center">
 						<h2 class="mb-4">CEO</h2>
@@ -240,4 +238,5 @@
 
 	gtag('config', 'UA-23581568-13');
 </script>
+</body>
 </html>
