--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
                     <li class="nav-item"><a href="products.html" class="nav-link">产品代理</a></li>
                     <li class="nav-item"><a href="others.html" class="nav-link">其他服务</a></li>
                     <li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
-                    <li class="nav-item active"><a href="about.html" class="nav-link">关于慧洋</a></li>
+                    <li class="nav-item"><a href="about.html" class="nav-link">关于慧洋</a></li>
                     <li class="nav-item  active"><a href="contact.html" class="nav-link">联系我们</a></li>
                 </ul>
             </div>
@@ -48,9 +48,8 @@
                     <h1 class="mb-2 bread">Contact Me</h1>
                     <p class="breadcrumbs">
                         <span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span>
-                        <span class="mr-2"><a href="products.html">Portfolio Architecture<i class="ion-ios-arrow-forward"></i></a></span>
-                        <span class="mr-2"><a href="products.html">Portfolio Software<i class="ion-ios-arrow-forward"></i></a></span>
-                        <span class="mr-2"><a href="news.html">Blog <i class="ion-ios-arrow-forward"></i></a></span></div>
+                        <span class="mr-2"><a href="about.html">About <i class="ion-ios-arrow-forward"></i></a></span>
+                        <span class="mr-2"><a href="news.html">news <i class="ion-ios-arrow-forward"></i></a></span></div>
                 </div>
             </div>
         </div>
