--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 				</div>
 			</div>
 		</div>
-	</div>s
+	</div>
 	<div class="slider-item" style="background-image:url(images/bg_2.jpg);">
 		<div class="overlay"></div>
 		<div class="container">
