--- a/news.html
+++ b/news.html
@@ -47,11 +47,10 @@
 			<div class="col-md-9 ftco-animate text-center">
 				<h1 class="mb-2 bread">公司新闻</h1>
 
-<!--				<p class="breadcrumbs">-->
-<!--					<span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span>-->
-<!--					<span class="mr-2"><a href="products.html">Portfolio Architecture<i class="ion-ios-arrow-forward"></i></a>-->
-<!--					</span>-->
-<!--					<span class="mr-2"><a href="products.html">Portfolio Software<i class="ion-ios-arrow-forward"></i></a></span>-->
+				<p class="breadcrumbs">
+					<span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span>
+					<span class="mr-2"><a href="about.html">About <i class="ion-ios-arrow-forward"></i></a></span>
+					<span class="mr-2"><a href="contact.html">Contact <i class="ion-ios-arrow-forward"></i></a></span></div>
 			</div>
 		</div>
 	</div>
@@ -358,4 +357,5 @@
 
 	gtag('config', 'UA-23581568-13');
 </script>
+</body>
 </html>
